--- a/style.css
+++ b/style.css
@@ -8,16 +8,16 @@
   animation-duration: 35s;
   animation-iteration-count: infinite;
   z-index: -100;
-  left: 950px;
-  top: 300px;
+  left: 400px;
+  top: 400px;
 }
 
 #LogoMain{
-  width: 70px;
-  height: 70px;
+  width: 100px;
+  height: 100px;
   z-index: 100;
-  left: 1760px;
-  top: -6px;
+  left: 770px;
+  top: -5px;
   position: fixed;
 }
 
@@ -47,8 +47,9 @@ li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 20px 30px;
+  padding: 30px 30px;
   text-decoration: none;
+  font-size: 25px;
 }
 
 li a:hover:not(.active) {
